Fixed tests for parkingzonecontroller and parkingzoneservice